@@ -1,3 +1,7 @@
+2003-11-06  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
+
+	* Added -gotoxyz and -invert options from command line.
+
 2003-11-03  Dov Grobgeld  <dov@imagic.weizmann.ac.il>
 
 	* Fixed bug in fitting scale to contents.
